test/errors/type/collections/set/__le2.yasl
echo collections.set().__le(1, collections.set())
